crates/isobmff/src/snapshots/isobmff__conformance_tests__aggr_hvc1.mp4.snap
---
source: crates/isobmff/src/conformance_tests.rs
expression: redeserialized_file
snapshot_kind: text
---
IsobmffFile {
    ftyp: Some(
        FileTypeBox {
            major_brand: Brand::Iso6,
            minor_version: 0,
            compatible_brands: [
                Brand([109, 112, 52, 50]),
                Brand::IsoM,
                Brand::Iso6,
            ],
        },
    ),
    etyp: [],
    otyp: [],
    pdin: None,
    moov: Some(
        MovieBox {
            mvhd: MovieHeaderBox {
                full_header: FullBoxHeader {
                    version: 0,
                    flags: U24Be(
                        0,
                    ),
                },
                creation_time: 3506405881,
                modification_time: 3506405881,
                timescale: 600,
                duration: 1280,
                rate: 1,
                volume: 1,
                reserved1: 0,
                reserved2: 0,
                matrix: [
                    65536,
                    0,
                    0,
                    0,
                    65536,
                    0,
                    0,
                    0,
                    1073741824,
                ],
                pre_defined: [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
                next_track_id: 2,
            },
            meta: None,
            trak: [
                TrackBox {
                    tkhd: TrackHeaderBox {
                        version: 0,
                        flags: TrackHeaderBoxFlags(
                            TrackEnabled | TrackInMovie | TrackInPreview,
                        ),
                        creation_time: 3506405881,
                        modification_time: 3506405881,
                        track_id: 1,
                        reserved1: 0,
                        duration: 1280,
                        reserved2: 0,
                        layer: 0,
                        alternate_group: 0,
                        volume: 0,
                        reserved3: 0,
                        matrix: [
                            65536,
                            0,
                            0,
                            0,
                            65536,
                            0,
                            0,
                            0,
                            1073741824,
                        ],
                        width: 960,
                        height: 544,
                    },
                    tref: None,
                    trgr: None,
                    edts: None,
                    ttyp: None,
                    meta: None,
                    mdia: MediaBox {
                        mdhd: MediaHeaderBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            creation_time: 3506405881,
                            modification_time: 3506405881,
                            timescale: 30000,
                            duration: 64000,
                            language: Langauge(
                                [
                                    21,
                                    14,
                                    4,
                                ],
                            ),
                            pre_defined: 0,
                        },
                        hdlr: HandlerBox {
                            full_header: FullBoxHeader {
                                version: 0,
                                flags: U24Be(
                                    0,
                                ),
                            },
                            pre_defined: 0,
                            handler_type: HandlerType::Video,
                            reserved: [
                                0,
                                0,
                                0,
                            ],
                            name: Utf8String(
                                "vide",
                            ),
                        },
                        elng: None,
                        minf: MediaInformationBox {
                            vmhd: Some(
                                VideoMediaHeaderBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            1,
                                        ),
                                    },
                                    graphicsmode: 0,
                                    opcolor: [
                                        0,
                                        0,
                                        0,
                                    ],
                                },
                            ),
                            smhd: None,
                            hmhd: None,
                            sthd: None,
                            vvhd: None,
                            unknown_boxes: [],
                            dinf: DataInformationBox {
                                dref: DataReferenceBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    url: [
                                        DataEntryUrlBox {
                                            full_header: FullBoxHeader {
                                                version: 0,
                                                flags: U24Be(
                                                    1,
                                                ),
                                            },
                                            location: None,
                                        },
                                    ],
                                    urn: [],
                                    imda: [],
                                    snim: [],
                                    unknown_boxes: [],
                                },
                            },
                            stbl: SampleTableBox {
                                stsd: SampleDescriptionBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    boxes: [
                                        UnknownBox {
                                            header: BoxHeader {
                                                size: Short(
                                                    254,
                                                ),
                                                box_type: FourCc(
                                                    "hvc1",
                                                ),
                                            },
                                            data.len: 246,
                                        },
                                    ],
                                },
                                stts: TimeToSampleBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    entries: [
                                        TimeToSampleBoxEntry {
                                            sample_count: 64,
                                            sample_delta: 1000,
                                        },
                                    ],
                                },
                                ctts: Some(
                                    CompositionOffsetBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        entry_count: 64,
                                        entries.len: 64,
                                    },
                                ),
                                cslg: None,
                                stsc: SampleToChunkBox {
                                    full_header: FullBoxHeader {
                                        version: 0,
                                        flags: U24Be(
                                            0,
                                        ),
                                    },
                                    entry_count: 1,
                                    entries.len: 1,
                                },
                                stsz: Some(
                                    SampleSizeBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        sample_size: 0,
                                        sample_count: 64,
                                        entry_size.len: 64,
                                    },
                                ),
                                stz2: None,
                                stco: Some(
                                    ChunkOffsetBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        entry_count: 64,
                                        chunk_offset.len: 64,
                                    },
                                ),
                                co64: None,
                                stss: Some(
                                    SyncSampleBox {
                                        full_header: FullBoxHeader {
                                            version: 0,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        entry_count: 2,
                                        sample_number: [
                                            1,
                                            1,
                                        ],
                                    },
                                ),
                                stsh: None,
                                padb: None,
                                stdp: None,
                                sdtp: None,
                                sbgp: [],
                                sgpd: [
                                    SampleGroupDescriptionBox {
                                        full_header: FullBoxHeader {
                                            version: 1,
                                            flags: U24Be(
                                                0,
                                            ),
                                        },
                                        grouping_type: [
                                            114,
                                            97,
                                            112,
                                            32,
                                        ],
                                        default_length: Some(
                                            1,
                                        ),
                                        default_group_description_index: None,
                                        entry_count: 1,
                                        entries: [
                                            VisualRandomAccess(
                                                VisualRandomAccessEntry {
                                                    num_leading_samples_known: false,
                                                    num_leading_samples: 0,
                                                },
                                            ),
                                        ],
                                    },
                                ],
                                subs: [],
                                saiz: [],
                                saio: [],
                                csgp: [],
                            },
                        },
                        unknown_boxes: [],
                    },
                    unknown_boxes: [],
                    udta: None,
                },
            ],
            mvex: None,
            unknown_boxes: [
                UnknownBox {
                    header: BoxHeader {
                        size: Short(
                            33,
                        ),
                        box_type: FourCc(
                            "iods",
                        ),
                    },
                    data.len: 25,
                },
            ],
            udta: None,
        },
    ),
    moof: [],
    mdat: [
        MediaDataBox {
            data.len: 582448,
        },
    ],
    imda: [],
    meta: None,
    styp: [],
    sidx: [],
    ssix: [],
    prft: [],
    unknown_boxes: [],
    mfra: None,
}
